cabal-version:      2.4
name:               ghcjs-ld
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Josh Meredith
maintainer:         joshmeredith2008@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable ghcjs-ld
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      ghcjs,
                      text,
                      optparse-applicative,
                      deepseq,
                      containers,
                      bytestring,
                      wl-pprint-text,
                      parallel,
                      unordered-containers,
                      array,
                      base64-bytestring,
                      mtl,
                      lens,
                      split,
                      ghcjs-ld

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010

library
    hs-source-dirs:   src

    exposed-modules:  GHCJS.Linker
                      GHCJS.Linker.Compactor,
                      GHCJS.Linker.Monad

    build-depends:    base,
                      ghcjs,
                      text,
                      optparse-applicative,
                      deepseq,
                      containers,
                      bytestring,
                      wl-pprint-text,
                      parallel,
                      unordered-containers,
                      array,
                      base64-bytestring,
                      mtl,
                      lens,
                      split
